--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ body, html{height:100%;}
 <script type="text/javascript" src="src/tilemap.js"></script>
 <script type="text/javascript" src="src/game.js"></script>
 <script type="text/javascript" src="src/app.js"></script>
+<script type="text/javascript" src="src/solid.js"></script>
+<script type="text/javascript" src="src/rdflib.js"></script>
+
 
 </head>
 
