--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>2048</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1, maximum-scale=1" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<link rel="apple-touch-icon" href="images/icon.png"/>
-<link rel="apple-touch-startup-image" href="images/icon.png" />
-<link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>2048 - Solid Edition</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon" href="images/icon.png">
+  <link rel="apple-touch-startup-image" href="images/icon.png">
+  <link rel="stylesheet" href="css/style.css">
 
-<style type="text/css">
-body, div, canvas{
-    image-rendering: optimizeSpeed;
-    -webkit-image-rendering: optimizeSpeed;
-    -webkit-interpolation-mode: nearest-neighbor;
-}
-body{padding:0; margin:0; font-size:12px; background-color:#fff;}
-body, html{height:100%;}
-#outer{height:100%; overflow:hidden; position:relative; width:100%;}
-#outer[id]{display:table; position:static;}
-#middle{position:absolute; top:50%;} /* for ie only*/
-#middle[id]{display:table-cell; vertical-align:middle; position:static;}
-#container{position:relative; width:2000px; height:1000px; top:-50%; margin:0 auto;}
-#msg{text-align:center; margin-top:50%;}
-#fps{position:absolute; top:0; left:0; color:#000;}
-</style>
+  <style>
+    body, div, canvas {
+      image-rendering: optimizeSpeed;
+      -webkit-image-rendering: optimizeSpeed;
+      -webkit-interpolation-mode: nearest-neighbor;
+    }
+    body { padding: 0; margin: 0; font-size: 12px; background-color: #fff; }
+    body, html { height: 100%; }
+    #outer { height: 100%; overflow: hidden; position: relative; width: 100%; }
+    #outer[id] { display: table; position: static; }
+    #middle { position: absolute; top: 50%; }
+    #middle[id] { display: table-cell; vertical-align: middle; position: static; }
+    #container { position: relative; width: 2000px; height: 1000px; top: -50%; margin: 0 auto; }
+    #msg { text-align: center; margin-top: 50%; }
+    #fps { position: absolute; top: 0; left: 0; color: #000; }
+  </style>
 
-<script type="text/javascript" src="js/1.0.0/hilo-standalone.js"></script>
-<script type="text/javascript" src="src/tile.js"></script>
-<script type="text/javascript" src="src/tilemap.js"></script>
-<script type="text/javascript" src="src/game.js"></script>
-<script type="text/javascript" src="src/app.js"></script>
-<script type="text/javascript" src="src/solid.js"></script>
-<script type="text/javascript" src="src/rdflib.js"></script>
+  <!-- Game Engine -->
+  <script src="js/1.0.0/hilo-standalone.js"></script>
 
+  <!-- Game Logic -->
+  <script src="src/tile.js"></script>
+  <script src="src/tilemap.js"></script>
+  <script src="src/game.js"></script>
+  <script src="src/app.js"></script>
 
+  <!-- Modern Solid Integration (ES Module) -->
+  <script type="module" src="/src/main.js"></script>
 </head>
 
 <body>
-
-<div id="outer">
+  <div id="outer">
     <div id="middle">
-        <div id="container">
-            <div id="msg">Loading...</div>
-        </div>
+      <div id="container">
+        <div id="msg">Loading...</div>
+      </div>
     </div>
-</div>
-<div id="fps"></div>
-
+  </div>
+  <div id="fps"></div>
 </body>
-
 </html>
