--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     </footer>
   </div>
 
-  <script type="module" src="/src/game.js"></script>
+  <script type="module" src="src/game.js"></script>
 </body>
 </html>
